# cnf2ddnnfTechniques

./: .gitignore  LICENSE  README.md  SAT.py  getStatistics.py  requirements.txt
data/2023SAT_Competition_MCtrack1/: mc2023_track1_000.cnf  mc2023_track1_001.cnf  mc2023_track1_002.cnf  mc2023_track1_003.cnf  mc2023_track1_004.cnf  mc2023_track1_005.cnf  mc2023_track1_006.cnf  mc2023_track1_007.cnf  mc2023_track1_008.cnf  mc2023_track1_009.cnf  mc2023_track1_010.cnf  mc2023_track1_011.cnf  mc2023_track1_012.cnf  mc2023_track1_013.cnf  mc2023_track1_014.cnf  mc2023_track1_015.cnf  mc2023_track1_016.cnf  mc2023_track1_017.cnf  mc2023_track1_018.cnf  mc2023_track1_019.cnf  mc2023_track1_020.cnf  mc2023_track1_021.cnf  mc2023_track1_022.cnf  mc2023_track1_023.cnf  mc2023_track1_024.cnf  mc2023_track1_025.cnf  mc2023_track1_026.cnf  mc2023_track1_027.cnf  mc2023_track1_028.cnf  (+161 more)
programs/dDNNFreasoner/: AUTHORS  COPYING  ChangeLog  INSTALL  Makefile  Makefile.in  README  aclocal.m4  commands.txt  config.h  config.h.in  config.status  configure  configure.ac  mc2023_track1_008.cnf.nnf  query-dnnf  viv.nnf
programs/dDNNFreasoner/local.m4.d/: ax_cxx_compile_stdcxx.m4  ax_cxx_compile_stdcxx_14.m4
programs/dDNNFreasoner/src/: Makefile  Makefile.am  Makefile.in  graph.cpp  graph.hpp  linObjFunc.cpp  linObjFunc.hpp  main.cpp  model.cpp  model.hpp  node.cpp  node.hpp  parser.cpp  parser.hpp  prompt.cpp  prompt.hpp  query-dnnf  weightvector.hpp
programs/dDNNFreasoner/src/.deps/: graph.Po  linObjFunc.Po  main.Po  model.Po  node.Po  parser.Po  prompt.Po
scripts/: cmdExample.txt
(+303 files in other folders)
